<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="wrap_content"
            android:minHeight="100dp"
            android:minWidth="100dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_image" />
        <ImageView
            android:id="@+id/ivIcon"
            android:onClick="selectImage"
            android:src="@drawable/ic_edit_white_18dp"
            android:tint="@color/black"
            android:layout_gravity="center"
            android:layout_width="32dp"
            android:layout_height="32dp"/>
    </FrameLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        app:hintAnimationEnabled="false"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameLayout"
        app:hintAnimationEnabled="false"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center">
        <Button
            android:onClick="proceed"
            android:id="@+id/proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            tools:ignore="UnusedAttribute"
            android:text="@string/proceed"/>
    </LinearLayout>

</LinearLayout>